--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -133,6 +133,7 @@
             android:layout_gravity="left" />
 
         <ImageView
+            android:id="@+id/send_smile"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
@@ -141,6 +142,7 @@
             android:layout_gravity="center_horizontal" />
 
         <ImageView
+            android:id="@+id/send_card"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
