--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,8 +61,9 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:layout_height="80dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             android:src="@drawable/white_circle"
             android:scaleType="fitCenter"
             android:layout_gravity="center"/>
