--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -88,6 +88,7 @@
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorBlue"
                 android:textSize="15sp"
+                android:singleLine="true"
                 android:text="branleur de chèvres"/>
             <TextView
                 android:id="@+id/nb_personal_wins"
