--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorYellow">#ffdc00</color>
+    <color name="colorBlue">#1e3278</color>
+    <color name="colorGrey">#ebf0f0</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
