--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">@color/colorBlue</color>
 
+    <color name="colorWhiteAlpha">#99FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorDarkGrey">#A8A8A8</color>
     <color name="colorYellow">#FFDC00</color>
