--- a/app/src/main/res/layout/activity_create_cards.xml
+++ b/app/src/main/res/layout/activity_create_cards.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlue"
-    tools:context="com.wcs.germain.winstatehack.Cards.CreateCards">
+    tools:context="com.wcs.germain.winstatehack.CreateCards">
 
     <LinearLayout
         android:id="@+id/linearLayout"
