--- a/app/src/main/res/layout/activity_menu_cards.xml
+++ b/app/src/main/res/layout/activity_menu_cards.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlue"
-    tools:context="com.wcs.germain.winstatehack.Cards.MenuCards">
+    tools:context="com.wcs.germain.winstatehack.MenuCards">
 
 <LinearLayout
     android:layout_width="match_parent"
