--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -118,6 +118,25 @@
         android:id="@+id/earth"
 
         />
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/nbre_smile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="129dp"
+        android:layout_marginRight="129dp"
+        android:text="@string/sourires"
+        android:textColor="@color/colorYellow"
+        android:textStyle="bold"
+        android:visibility="gone"/>
+
+</RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
