--- a/app/src/main/res/layout/activity_cards_collection.xml
+++ b/app/src/main/res/layout/activity_cards_collection.xml
@@ -15,7 +15,17 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="19sp"
-        android:textColor="@color/colorBlue" />
+        android:textColor="@color/colorBlue"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/deck_nbre"
+        android:background="@drawable/buttonbordercard"
+        android:text="@string/deck_nbrecartes"
+        android:textAlignment="center"
+        android:layout_below="@id/deck_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/deck_ok"
