--- a/app/src/main/res/layout/activity_cards_collection.xml
+++ b/app/src/main/res/layout/activity_cards_collection.xml
@@ -15,8 +15,7 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="19sp"
-        android:textColor="@color/colorBlue"
-        android:visibility="gone"/>
+        android:textColor="@color/colorBlue" />
 
     <TextView
         android:id="@+id/deck_nbre"
@@ -25,7 +24,8 @@
         android:textAlignment="center"
         android:layout_below="@id/deck_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/deck_ok"
@@ -39,7 +39,8 @@
         android:textSize="19sp"
         android:background="@drawable/buttonbordercard"
         android:layout_marginBottom="30dp"
-        android:textColor="@color/colorBlue" />
+        android:textColor="@color/colorBlue"
+        android:visibility="gone"/>
 
         <View
             android:layout_width="5dp"
