--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,6 +21,7 @@
             android:textSize="20sp"
             android:textColor="@color/colorYellow"
             android:text="mes contacts"/>
+
         <TextView
             android:id="@+id/contact_new"
             android:layout_width="0dp"
@@ -31,10 +31,26 @@
             android:textSize="20sp"
             android:textColor="@color/colorYellow"
             android:text="nouveau contact"/>
+
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <ListView
         android:id="@+id/listview_contact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000"
+        android:background="@color/colorBlue"/>
+
+        <TextView android:id="@android:id/empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background" />
+
+    </LinearLayout>
 
 </LinearLayout>
