--- a/app/src/main/res/layout/activity_create_cards.xml
+++ b/app/src/main/res/layout/activity_create_cards.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlue"
+    android:background="@drawable/background"
+
     tools:context="com.wcs.germain.winstatehack.CreateCards">
 
     <LinearLayout
