--- a/app/src/main/res/layout/activity_cards_collection.xml
+++ b/app/src/main/res/layout/activity_cards_collection.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/deck_title"
+        android:background="@drawable/buttonbordercard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Votre deck"
@@ -26,6 +27,8 @@
         android:layout_below="@id/deck_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="19sp"
+        android:textColor="@color/colorBlue"
         android:visibility="gone"/>
 
     <TextView
@@ -38,9 +41,9 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="19sp"
+        android:textColor="@color/colorBlue"
         android:background="@drawable/buttonbordercard"
         android:layout_marginBottom="30dp"
-        android:textColor="@color/colorBlue"
         android:visibility="gone"/>
 
     <View
@@ -61,6 +64,7 @@
         android:layout_centerHorizontal="true"
         android:scaleX="0"
         android:background="@android:color/black"/>
+
     <View
         android:layout_width="5dp"
         android:layout_height="match_parent"
@@ -72,6 +76,7 @@
         android:layout_alignParentEnd="true"
         android:scaleY="0"
         android:background="@android:color/black"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
