--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -8,29 +8,32 @@
     tools:context="com.wcs.germain.winstatehack.ContactActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_width="match_parent"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/contact_tv"
-            android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:layout_margin="10dp"
             android:textColor="@color/colorYellow"
-            android:text="mes contacts"/>
+            android:text="Mes contacts"/>
 
         <TextView
             android:id="@+id/contact_new"
-            android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:singleLine="false"
             android:gravity="center_horizontal"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:layout_margin="10dp"
             android:textColor="@color/colorYellow"
-            android:text="nouveau contact"/>
+            android:text="Nouveau contact"/>
 
     </LinearLayout>
 
